changed some layout issues

--- a/cygapp/static/css/base.css
+++ b/cygapp/static/css/base.css
@@ -9,3 +9,12 @@ body {
 .sidebar-nav {
     padding: 9px 0;
 }
+
+@media (max-width: 980px) {
+    /* Enable use of floated navbar text */
+    .navbar-text.pull-right {
+      float: none;
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+}
